# renaim

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/photo_renamer/: __init__.py  cli.py  config.py  database.py  harmonize.py  images.py  naming.py  ollama.py  operations.py
tests/: test_cli.py  test_config.py  test_harmonize.py  test_naming.py  test_operations.py
